2002-12-10  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* configure.in: don't check for bad hasmntopt() function if
	hasmntopt() doesn't exist on the system, because we will replace
	it with our own version anyway.

	* conf/transp/transp_sockets.c (amu_get_myaddress): use "%lx" in
	dlog because htonl() returns a u_long.

2002-12-10  Erez Zadok  <ezk@localhost.localdomain>

	* include/am_defs.h: use system's hasmntopt() only if it is found
	and it is not buggy.

	* libamu/hasmntopt.c (nextmntopt): isspace() takes an int, not a
	char.

	* amd/am_ops.c, amd/amfs_auto.c, amd/autil.c, amd/nfs_subr.c,
	amd/ops_cdfs.c, amd/ops_nfs.c, amd/srvr_nfs.c, libamu/hasmntopt.c,
	libamu/mount_fs.c, libamu/mtab.c: rename all uses of hasmntopt()
	to amu_hasmntopt().  Don't use hasmntopt() directly any more!

	* aux/macros/func_bad_hasmntopt.m4: new M4 macro to test for a bad
	hasmntopt() function, which incorrectly finds the option "soft" in
	a string "hard,softlookup,ro".

	* libamu/hasmntopt.c (hasmntopt): use 'const' on two args to
	hasmntopt(), to match what most systems use.

	* aux/macros/header_templates.m4: template for HAVE_BAD_HASMNTOPT.

	* configure.in: invoke test for bad hasmntopt()

	* NEWS: minor new port, i386-pc-linux-rh8.0.
	Mention autofs-v4 on solaris9 works.

	* bootstrap: remove any autom4te-*.cache directories, now that
	autoconf uses a version number for them.

2002-12-09  Ion Badulescu  <ionut@moisil.badula.org>

	Patches from Christos Zoulas:

	-1- am_utils.h: add full prototypes
	-2- amfs_auto.c make functions static and add prototypes
	-3- map.c: kill double free
	-5- transp_sockets.c: add full prototypes

2002-12-09  Ion Badulescu  <ionut@moisil.badula.org>

	* NEWS: updated

	* doc/am-utils.texi (opts Option): document sftlookup

	* conf/autofs/autofs_solaris_v2_v3.c: compile fixes

2002-11-22  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* amd/info_ldap.c (amu_ldap_rebind): gopt.ldap_cache_seconds is
	%ld not %d.
