@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: nfs_prot_darwin.h,v 1.4 2002/02/02 20:58:59 ezk Exp $
+ * $Id: nfs_prot_darwin.h,v 1.5 2002/12/10 22:33:02 ezk Exp $
  *
  */
 
@@ -235,7 +235,7 @@ typedef writeargs nfswriteargs;
 /*
  * as of 3.0-RELEASE the nfs_fh3 that is defined in the system headers
  * (or the one generated by rpcgen) lacks the proper full definition,
- * listed below.  A special macro (aux/macros/struct_nfs_fh3.m4) searches
+ * listed below.  A special macro (m4/macros/struct_nfs_fh3.m4) searches
  * for this special name before other names.
  */
 
