@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: nfs_prot_freebsd3.h,v 1.9 2002/02/26 08:28:21 ezk Exp $
+ * $Id: nfs_prot_freebsd3.h,v 1.10 2002/12/10 22:33:02 ezk Exp $
  *
  */
 
@@ -163,7 +163,7 @@ typedef writeargs nfswriteargs;
 /*
  * as of 3.0-RELEASE the nfs_fh3 that is defined in the system headers
  * (or the one generated by rpcgen) lacks the proper full definition,
- * listed below.  A special macro (aux/macros/struct_nfs_fh3.m4) searches
+ * listed below.  A special macro (m4/macros/struct_nfs_fh3.m4) searches
  * for this special name before other names.
  */
 struct nfs_fh3_freebsd3 {
