@@ -17,4 +17,4 @@ if [ ! -f amd/amd.c ]; then
 	exit 1
 fi
 
-cd aux && make $*
+cd m4 && make $*
